[package]
name = "tun-route-daemon"
version = "0.1.4"
authors = ["abdullah ince"]
description = "A Rust-based daemon for managing and monitoring TUN devices and their routing configurations."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tun_route_daemon"
path = "src/lib.rs"

[[bin]]
name = "tun-route-daemon"
path = "src/main.rs"

[dependencies]
net-route = "0.2.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pnet = "0.34.0"
regex = "1.9.4"
